--- a/Layouts/Intro1.uistate.xml
+++ b/Layouts/Intro1.uistate.xml
@@ -23,7 +23,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Fade" />
+    <active-layer name="Fundo" />
     <layers>
         <layer locked="0" name="Fundo" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Logo" parallax-in-editor="0" visible="1" />
