--- a/Layouts/Pergunta2.uistate.xml
+++ b/Layouts/Pergunta2.uistate.xml
@@ -23,12 +23,12 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Rolezin" />
+    <active-layer name="FundoPergunta" />
     <layers>
         <layer locked="1" name="Rolezin" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="FundoPergunta" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Layer 1" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="Respostas" parallax-in-editor="0" visible="1" />
-        <layer locked="0" name="Ajudas" parallax-in-editor="0" visible="1" />
+        <layer locked="1" name="Ajudas" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
