--- a/Layouts/Pergunta3.uistate.xml
+++ b/Layouts/Pergunta3.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>640</position-x>
-        <position-y>272.401</position-y>
-        <position-z>146.41</position-z>
+        <position-y>360</position-y>
+        <position-z>235.795</position-z>
         <lookat-x>640</lookat-x>
-        <lookat-y>272.401</lookat-y>
+        <lookat-y>360</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -23,12 +23,13 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Respostas" />
+    <active-layer name="Pergunta_3" />
     <layers>
         <layer locked="1" name="Rolezin" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="FundoPergunta" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Layer 1" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="Respostas" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="Ajudas" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Pergunta_3" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
