--- a/Layouts/PerguntaTodos.uistate.xml
+++ b/Layouts/PerguntaTodos.uistate.xml
@@ -4,11 +4,11 @@
 It is entirely optional and the project will load without it.  If you are placing the project under source control,
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
-        <position-x>427</position-x>
-        <position-y>240</position-y>
-        <position-z>100</position-z>
-        <lookat-x>427</lookat-x>
-        <lookat-y>240</lookat-y>
+        <position-x>524.042</position-x>
+        <position-y>321.566</position-y>
+        <position-z>121</position-z>
+        <lookat-x>524.042</lookat-x>
+        <lookat-y>321.566</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -18,16 +18,18 @@ you probably do not want to add any .uistate.xml files to the repository.-->
     <show-collision-polys>0</show-collision-polys>
     <translucent-inactive-layers>0</translucent-inactive-layers>
     <properties>
+        <property expanded="1" name="Layout properties" />
         <property expanded="0" name="Layout Size" />
         <property expanded="0" name="Margins" />
+        <property expanded="1" name="Effects" />
     </properties>
     <active-layer name="Rolezin" />
     <layers>
         <layer locked="0" name="Rolezin" parallax-in-editor="0" visible="1" />
-        <layer locked="0" name="FundoPergunta" parallax-in-editor="0" visible="1" />
+        <layer locked="1" name="FundoPergunta" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Layer 1" parallax-in-editor="0" visible="1" />
-        <layer locked="0" name="Respostas" parallax-in-editor="0" visible="1" />
-        <layer locked="0" name="Ajudas" parallax-in-editor="0" visible="1" />
+        <layer locked="1" name="Respostas" parallax-in-editor="0" visible="1" />
+        <layer locked="1" name="Ajudas" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="PoPup" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
