--- a/Layouts/Tabuleiro2.xml
+++ b/Layouts/Tabuleiro2.xml
@@ -1423,7 +1423,7 @@
                     <behavior-instances>
                         <behavior-instance type="LiteTween">
                             <properties>
-                                <active-on-start>Yes</active-on-start>
+                                <active-on-start>No</active-on-start>
                                 <tweened-property>Position</tweened-property>
                                 <function>EaseInOutBack</function>
                                 <target>234, 91</target>
